test/bad/generics/call02.px

func f(x: Int): Int def
    return x

func g<T>(x: T): Void def
    print f(x)

g('0')
